--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,166 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+* {
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+html {
+	font-size: 62.5%;
+}
+
+:root {
+	--color-primary: #031214;
+	--color-secondary: #00305e;
+	--color-light: #dbf6e9;
+	--color-dark: #151515;
+}
+
+body {
+	font-size: 1.6rem;
+	font-family: "Comic Sans MS", "Comic Sans", cursive;
+	background: rgb(6, 79, 106);
+	color: var(--color-light);
+}
+
+.container {
+	width: 90%;
+	max-width: 120rem;
+	padding: 0 2rem;
+	margin: 0 auto;
+}
+
+.logo {
+	width: 50rem;
+	margin: 8rem auto;
+}
+.logo img {
+	width: 100%;
+}
+
+.filtrar {
+	width: 100%;
+	max-width: 60rem;
+	margin: 0 auto;
+	margin-bottom: 5rem;
+	box-shadow: 0 0 1rem 0 blue;
+	font-family: "Comic Sans MS", "Comic Sans", cursive;
+}
+input {
+	height: 4rem;
+	border: none;
+	border-radius: 0.5rem;
+	padding: 0 1rem;
+	outline: var(--color-primary);
+	width: 100%;
+}
+
+.lista-personajes {
+	width: 100%;
+	display: grid;
+	grid-template: auto / 1fr;
+	gap: 4rem;
+}
+
+.personaje {
+	background: grey;
+	border-radius: 5rem;
+	box-shadow: 0 0 1rem 0 blue;
+	display: grid;
+	grid-template: 15rem auto / 1fr;
+	overflow: hidden;
+	animation: showCard 0.8s linear;
+}
+@keyframes showCard {
+	from {
+		opacity: 0;
+	}
+}
+.personaje-header {
+	background: black;
+	padding: 2rem;
+	text-align: right;
+}
+.estado {
+	background: gray;
+	display: inline-flex;
+	color: var(--color-light);
+	padding: 0.5rem 1rem;
+	border-radius: 2.10rem;
+	font-size: 1.2rem;
+	width: auto;
+	justify-content: space-between;
+	align-items: center;
+	column-gap: 1rem;
+}
+.estado span {
+	display: block;
+	height: 1rem;
+	width: 1rem;
+	border-radius: 50%;
+}
+.Alive {
+	background: #4bff04;
+}
+.Dead {
+	background: #f80707;
+}
+.unknown {
+	background: #ffffff;
+}
+.personaje-body {
+	padding: 8rem 2rem 4rem;
+	position: relative;
+}
+.personaje-body figure {
+	position: absolute;
+	display: block;
+	width: 12rem;
+	height: 12rem;
+	border-radius: 50%;
+	top: -6rem;
+	left: 50%;
+	transform: translateX(-50%);
+	box-shadow: 0 0 1rem 0 blue;
+	overflow: hidden;
+}
+.personaje-body figure img {
+	height: 100%;
+	width: 100%;
+	object-fit: cover;
+}
+.personaje-body h2 {
+	width: 100%;
+	background: rgb(41, 78, 151);
+	color: var(--color-dark);
+	border-radius: 0.5rem;
+	height: 3rem;
+	line-height: 3rem;
+	text-align: center;
+	transition-property: background, color;
+	font-size: 1.8rem;
+}
+.personaje-body p {
+	width: 100%;
+	background: rgba(0, 255, 225, 0.9);
+	color: var(--color-dark);
+	border-radius: 0.5rem;
+	height: 4rem;
+	margin-top: 2rem;
+	line-height: 4rem;
+	text-align: center;
+}
+.personaje-body p span {
+	font-weight: bold;
+}
+
+@media screen and (min-width: 600px) {
+	.lista-personajes {
+		grid-template: auto / repeat(2, 1fr);
+	}
+}
+
+@media screen and (min-width: 1000px) {
+	.lista-personajes {
+		grid-template: auto / repeat(3, 1fr);
+	}
 }
